# untitled_physics_simulator

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.env/: pyvenv.cfg
pscomp_derive/: Cargo.toml
pscomp_derive/src/: lib.rs
python/untitled_physics_simulator/: __init__.py
python_tests/: test.py
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/framework/: camera.rs  mod.rs  ps_component.rs
rust/src/framework/data_collection/: dataframe_conversions.rs  records.rs
rust/src/framework/geometry/: geometry_parsing.rs
rust/src/framework/plugins/: base_plugin.rs  mod.rs
rust/src/framework/plugins/custom_plugins/: mod.rs
rust/src/framework/plugins/custom_plugins/warhead/: mod.rs  py_warhead.rs
rust/src/framework/py_modules/: entity_builder.rs  simulation_builder.rs
rust/src/models/test/: test_model.rs
src/: lib.rs
src/framework/: camera.rs  mod.rs  ps_component.rs  simulation_builder.rs
src/framework/data_collection/: dataframe_conversions.rs  mod.rs  records.rs
src/framework/geometry/: geometry_parsing.rs  mod.rs
src/framework/physics/: aerodynamics.rs  mod.rs
src/framework/physics/aerodynamics/: aero_plugin.rs  common.rs  drag.rs  lift.rs  magnus.rs  mod.rs  overturning.rs  pitch_damping.rs  rolling.rs  spin_damping.rs
src/framework/plugins/: base_plugin.rs  mod.rs  plugin_group.rs
src/framework/py_modules/: entity_builder.rs  mod.rs  simulation_builder.rs
src/models/: base_component.rs  mod.rs
src/models/gun/: gun.rs  mod.rs
src/models/test/: test_model.rs
src/models/warhead/: py_warhead.rs
src/untitled_physics_simulator/: __init__.py  untitled_physics_simulator.py
