[package]
name = "untitled_physics_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "untitled_physics_simulator"
crate-type = ["cdylib"]

[dependencies]
bevy = { version = "0.9.0" }
bevy_rapier3d = { version = "0.19.0", features = ["serde-serialize", "enhanced-determinism"] }
iyes_loopless = "0.9.0"
anyhow = "1.0.66"
polars = "0.25.1"
pyo3 = { version = "0.17.3", features = ["extension-module"] }
serde_json = "1.0.89"
tobj = "3.2.3"
flume = "0.10.14"
polars-arrow = "0.25.1"
polars-core = "0.25.1"
