[package]
name = "untitled_physics_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "untitled_physics_simulator"
path = "src/lib.rs"
crate-type = ["cdylib"]


[dependencies]
bevy = { version = "0.10.0" }
bevy_rapier3d = { version = "0.21.0", features = ["serde-serialize", "parallel"] }
anyhow = "1.0.66"
polars = "0.27.2"
pyo3 = { version = "0.18.1", features = ["extension-module"] }
tobj = "3.2.3"
flume = "0.10.14"
polars-arrow = "0.27.2"
polars-core = "0.27.2"
parking_lot = "0.12.1"
ron = "0.8.0"
serde = "1.0.152"
glam = "0.23.0"
pscomp_derive = { version = "0.1.0", path = "pscomp_derive" }


[profile.dev.package.bevy_rapier3d]
opt-level = 3

[profile.dev.package.bevy]
opt-level = 3