[package]
name = "untitled_physics_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "untitled_physics_simulator"
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "untitled_physics_simulator._untitled_physics_simulator"

[dependencies]
bevy = { version = "0.9.0" }
bevy_rapier3d = { version = "0.19.0", features = ["serde-serialize", "enhanced-determinism", "parallel"] }
anyhow = "1.0.66"
polars = "0.25.1"
pyo3 = { version = "0.17.3", features = ["extension-module"] }
tobj = "3.2.3"
flume = "0.10.14"
polars-arrow = "0.25.1"
polars-core = "0.25.1"
parking_lot = "0.12.1"
ron = "0.8.0"
serde = "1.0.152"
glam = "0.22.0"
bevy-trait-query = "0.1.1"
